# SongMingHe

./: .gitignore  .gitmodules  README.md  _config.yml  build.ts  buildUtils.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1728311937292-5bff1670bcea6.mjs  vite.config.ts.timestamp-1729169791294-832f98e435228.mjs  vite.config.ts.timestamp-1729170141192-ee3de52c7204.mjs  vite.config.ts.timestamp-1729170405916-d7a0ea4a84d94.mjs
.github/workflows/: pages.yml
source/: page_test.md
source/_posts/: hello-world.md  测试.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmds.rs  lib.rs  main.rs
src-tauri/src/kit/: aes.rs  mod.rs  ring.rs
src-tauri/src/utils/: encrypt.rs  help.rs  mod.rs
src-tauri/tests/: lib_test.rs
src/assets/: main.css
src/assets/pages/: IO模型.html  Raft.html  blogPages.json  ubuntu20误操作导致开机到logo页面后直接关机.html  windows与ubuntu双系统主机下ubuntu访问windows磁盘是只读.html  云原生应用的12要素.html  常用分布式锁方案中间件整理.html  开发工作流程思考.html  系统架构设计.html  编程语言学习思考.html  进程_线程_协程.html
src/md/: IO模型.md  Raft.md  ubuntu20误操作导致开机到logo页面后直接关机.md  windows与ubuntu双系统主机下ubuntu访问windows磁盘是只读.md  云原生应用的12要素.md  学习编程语言，系统组件的思考.md  常用分布式锁方案中间件整理.md  开发工作流程思考.md  系统架构设计.md  编程语言学习思考.md  进程_线程_协程.md
src/router/: index.ts
src/views/: BlogItem.vue  BlogList.vue  MsgBox.vue
test/: test.js
