[package]
name = "song_vue_tauri"
version = "0.1.0"
description = "song.vue.ts.tauri"
authors = ["songmh"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "song_vue_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.3", features = [] }
tauri-plugin-log = "2.0.0-rc"
ring = "0.17.8"